# AzureSphereAltair8800

./: .gitignore  .gitmodules  README.md
.github/workflows/: azure-static-web-apps-gentle-dune-0f55d4d00.yml  azure-static-web-apps-icy-pebble-012b92e00.yml
AltairHL_emulator/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  comms_manager_wolf.c  comms_manager_wolf.h  declarations.h  iotc_manager.c  iotc_manager.h  launch.vs.json  main.c  main.h  onboard_sensors.c  onboard_sensors.h  user_settings.h  weather.c
AltairHL_emulator/Altair8800/: 88dcdd.c  88dcdd.h  memory.c
AltairHL_emulator/BasicSamples/: IOT.BAS
AltairHL_emulator/FrontPanels/: front_panel_click.c  front_panel_click.h  front_panel_kit.c  front_panel_retro_click.c  front_panel_retro_click.h
AltairHL_sd_card_format_drive_a/: CMakeLists.txt  app_manifest.json  main.c
AltairHL_sd_card_format_drive_b/: CMakeLists.txt  main.c
AltairPY_virtual_disk_server/: Empty.dsk  PyDiskSvr.py  TestDisk.dsk  TestImg.dsk  pyvdisk.service  pyvdisk.sh
AltairRT_enviromon/: CMakeLists.txt  app_manifest.json  intercore.h  launch.vs.json  main.c  utils.c  utils.h
AltairRT_enviromon/IMU_lib/: imu_temp_pressure.c  imu_temp_pressure.h
AltairRT_imagepackages/: AltairHL_sd_card_format_a.imagepackage  AltairHL_sd_card_format_b.imagepackage  AltairRT_disk_cache_server.imagepackage  AltairRT_enviromon.avnet.imagepackage  AltairRT_enviromon.generic.imagepackage  AltairRT_sd_card_server.imagepackage  AltairRT_sd_card_service_avnet_rev_2.imagepackage
AltairRT_sd_card_server/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
AltairRT_sd_card_service/: CMakeLists.txt  app_manifest.json  main.c
Altair_Deploy_OTA/: config.ps1  deploy_image.ps1
Altair_Web_Terminal/: app.html  login.html  routes.json
Altair_Web_Terminal/api/: GetChannelId.cs  GetMqttCredentials.cs  PatchAsync.cs  Rpi.Rover.Iot.Hub.Function.csproj  local.settings.sample.json
IntercoreContract/: intercore_contract.h
tools/: disable_cmakelist_git_update.ps1  enable_cmakelist_git_update.ps1
tools/build-tools/: build_all.ps1
